--- a/signUp.html
+++ b/signUp.html
@@ -27,7 +27,7 @@
           >)
         </div>
       </nav>
-      <script src="header.js"></script>
+      <script src="scripts/header.js"></script>
     </header>
     <main>
       <h1>יצירת חשבון</h1>
